# server/swagger.yaml
@@ -1,33 +1,41 @@
-title: Sample Pet Store App
-description: This is a sample server for a pet store.
-termsOfService: http://example.com/terms/
-contact:
-  name: API Support
-  url: http://www.example.com/support
-  email: support@example.com
-license:
-  name: Apache 2.0
-  url: https://www.apache.org/licenses/LICENSE-2.0.html
-version: 1.0.1
-
-tags:
-  - name: user
-    description: user operations
-
 paths:
-  # [GET] users
-  /auth:
+  # ########################## [Auth]#######################################
+  /signup:
     get:
       tags:
-        - users
-      summary: Find All Users
+        - auth
+      summary: Signup new user account
+      parameters:
+        - name: id
+          in: path
+          description: user Id
+          required: true
+          type: integer
+        - name: body
+          in: body
+          description: user Data
+          required: true
+          schema:
+            $ref: "#/definitions/users"
       responses:
         200:
-          description: "OK"
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        201:
+          description: "Created success"
+        400:
+          description: "Bad Request"
+        409:
+          description: "Conflict"
         500:
           description: "Server Error"
 
-  # ##################################################################
+  # ########################## [Users]#######################################
   # [GET] users
   /users:
     get:
@@ -142,7 +150,3 @@ definitions:
       password:
         type: string
         description: user Password
-
-schemes:
-  - https
-  - http
